<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:background="@drawable/fondo">

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.1">
    </Space>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="0.3"
        android:layout_gravity="center_vertical">
        <TextView
            style="@style/titulo"
            android:text="@string/app_name">
        </TextView>
        <Button
            style="@style/boton"
            android:text="@string/un_jugador"
            android:id="@+id/unjug">
        </Button>

        <RadioGroup
            android:id="@+id/configDificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/facil"
                style="@style/radio"
                android:text="@string/facil"></RadioButton>

            <RadioButton
                android:id="@+id/normal"
                style="@style/radio"
                android:checked="true"
                android:text="@string/normal"></RadioButton>

            <RadioButton
                android:id="@+id/dificil"
                style="@style/radio"
                android:text="@string/dificil"></RadioButton>
        </RadioGroup>

        <Button
            style="@style/boton"
            android:id="@+id/dosjug"
            android:text="@string/dos_jugadores">
        </Button>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.3"></Space>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:layout_weight="0.5"
        android:rowCount="3">

        <ImageView
            android:id="@+id/a1"
            android:src="@drawable/circulo"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/a2"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/a3"
            android:src="@drawable/aspa"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/b1"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/b2"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/b3"
            android:src="@drawable/aspa"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/c1"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/c2"
            android:src="@drawable/circulo"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/c3"
            style="@style/casilla"
            />

    </GridLayout>
</LinearLayout>